--- a/Grey Mesh.theme.css
+++ b/Grey Mesh.theme.css
@@ -19,4 +19,5 @@
                                  `Y8P'                                                       
 */
 
-@import url('https://raw.githubusercontent.com/razermoon/grey-mesh/master/base/base.css');
+@import url('https://razermoon.github.io/themes/grey-mesh/0.8/base.css');
+
